# tic-tac-toe-haskell

tic-tac-toe/: tictactoe.cabal
tic-tac-toe-server/: tictactoe-server.cabal
tic-tac-toe-server/app/: Main.hs
tic-tac-toe-server/src/: GameState.hs  Lib.hs  Logic.hs
tic-tac-toe-server/test/: Spec.hs
tic-tac-toe/app/: Main.hs
tic-tac-toe/src/: GameState.hs  Lib.hs  Logic.hs  Render.hs
tic-tac-toe/test/: Spec.hs
