name:                tictactoe
version:             0.1.0.0
synopsis:            Synopsis for extra task 2
description:         Task @ for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/tictactoe#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib, GameState, Render, Logic
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , transformers
                     , containers
                     , mtl
                     , directory
                     , time
                     , array
                     , gloss
                     , hspec-core
                     , aeson
                     , warp
                     , wai
                     , http-client
                     , http-client-tls
                     , http-types
                     , conduit
                     , conduit-extra
                     , http-conduit
  default-language:    Haskell2010

executable tictactoe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hspec-core
                     , tictactoe
                     , transformers
                     , mtl
                     , directory
                     , time
                     , containers
                     , gloss
                     , async
                     , random
  default-language:    Haskell2010

test-suite tictactoe-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       
      base
    , hspec
    , QuickCheck        >= 2.12 && < 2.14
    , stm
    , mtl
    , array
    , tictactoe
    , containers
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010